2013-09-13  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php,
	include/constants.php,
	include/functions_db.php,
	operation/incidents/incident_detail.php: Added support
	to detect when an inventory object is removed.

2013-09-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/companies/company_detail.php: Fixed some
	acl problems.
	
	* godmode/grupos/configurar_grupo.php: Added a script.
	
	* include/functions_crm.php: Added a default value for
	a variable.
	
	* include/ajax/crm.php: Added an id to a form.
	
2013-09-13  Dario Rodriguez <dario@artica.es>

	*  include/functions_incidents.php: Fixed an
 	include/functions_db.php: Fixed an error
 	tracking inventory updates. 
 	* operation/incidents/incident_tracking.php: Fixed a problem
 	in layout of tracking table.

2013-09-13  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_crm.php: Fixed bug in company search.

2013-09-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_incidents.php: Improved the function
	"attach_incident_file" for deal correctly with filenames
	with blank spaces.
	
	* operation/incidents/incident_detail.php: Fixed the file
	upload.

2013-09-13  Dario Rodriguez <dario@artica.es>

	* include/js/integria_incident_search.js,
	include/functions_incidents.php,
	operation/incidents/incident_search_logic.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_dashboard_detail.php: Added new button
	to recover search on incident_detail and incident_dashboard_detail.

2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/grupos/configurar_grupo.php,
	  godmode/setup/setup_pandora.php: Added validation to
	  avoid nonexistent users.
	
	* include/ajax/remote_validations.php: Added code to check
	if an user exist and if the actual user can see it.
	
	* include/js/jquery.validation.functions.js: Added the
	function "validate_user" to validate if an user exist
	and if the actual user can see it.