@@ -1,3 +1,8 @@
+2013-09-16  Dario Rodriguez <dario@artica.es>
+
+	* operation/incidents/incident_workunits.php: Fixed an error
+	that doesn't load workunit and file uploader tabs properly.
+
 2013-09-13  Dario Rodriguez <dario@artica.es>
 
 	* include/functions_incidents.php,
